tests/baselines/reference/jsdocTypedefNoCrash2.errors.txt
tests/cases/compiler/export.js(1,13): error TS2451: Cannot redeclare block-scoped variable 'foo'.
tests/cases/compiler/export.js(1,13): error TS8008: Type aliases can only be used in TypeScript files.
tests/cases/compiler/export.js(6,14): error TS2451: Cannot redeclare block-scoped variable 'foo'.


==== tests/cases/compiler/export.js (3 errors) ====
    export type foo = 5;
                ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'foo'.
                ~~~
!!! error TS8008: Type aliases can only be used in TypeScript files.
    /**
     * @typedef {{
     * }}
     */
    export const foo = 5;
                 ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'foo'.